# SimpleMLP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mlp.cpp  mlp.h  mlp_module.cpp  model.ipynb  original.cpp
